# workradar

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  index.html  package.json  turbo.json
apps/mobile/: app.json  package.json
apps/mobile/app/: _layout.tsx  chat.tsx
apps/mobile/app/(auth)/: _layout.tsx  login.tsx  onboard.tsx  signup.tsx
apps/mobile/app/(tabs)/: _layout.tsx  applications.tsx  discover.tsx  insights.tsx  profile.tsx  radar.tsx
apps/mobile/app/job/: [id].tsx
apps/mobile/components/: ApplicationCard.tsx  ChatBubble.tsx  JobCard.tsx  MatchCircle.tsx  OnboardingStep.tsx  RadarCard.tsx  SkillPill.tsx  SponsorBadge.tsx
apps/mobile/lib/: haptics.ts  notifications.ts  store.ts  supabase.ts  theme.ts
apps/pipeline/: .gitignore  config.py  main.py  models.py  pyproject.toml  requirements.txt
apps/pipeline/embeddings/: __init__.py  generator.py
apps/pipeline/enrichment/: __init__.py  company.py  visa_intel.py
apps/pipeline/matching/: __init__.py  engine.py  radar_scanner.py  taste.py
apps/pipeline/parsers/: __init__.py  ai_parser.py  salary_parser.py  visa_parser.py
apps/pipeline/scrapers/: __init__.py  ashby.py  base.py  greenhouse.py  hn_hiring.py  lever.py  remoteok.py  runner.py  weworkremotely.py
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/api/radar/: route.ts
apps/web/components/: ChatInterface.tsx  JobCard.tsx  KanbanBoard.tsx  MatchScore.tsx  OnboardingStep.tsx  Sidebar.tsx  SkillPills.tsx  TopBar.tsx
apps/web/lib/: store.ts  utils.ts
(+21 files in other folders)
